# exercise-1-chess-FlyLeaff

./: .gitignore  README.md
Chess/: CMakeLists.txt
Chess/include/: Board.h  ChessExceptions.h  ConstUtils.h  Game.h  MovementStrats.h
Chess/include/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
Chess/src/: Board.cpp  Game.cpp  MovementStrats.cpp  main.cpp
Chess/src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  MovementStrats.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
docs/: _bishop_8cpp.html  _bishop_8h.html  _bishop_8h_source.html  _board_8cpp.html  _board_8h.html  _board_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _chess_8cpp.html  _chess_8h.html  _chess_8h_source.html  _chess_exceptions_8h.html  _chess_exceptions_8h_source.html  _const_utils_8h.html  _const_utils_8h_source.html  _game_8cpp.html  _game_8h.html  _game_8h_source.html  _king_8cpp.html  _king_8h.html  _king_8h_source.html  _knight_8cpp.html  _knight_8h.html  _knight_8h_source.html  _movement_strats_8cpp.html  _movement_strats_8h.html  _movement_strats_8h_source.html  _pawn_8cpp.html  _pawn_8h.html  _pawn_8h_source.html  _piece_8cpp.html  _piece_8h.html  _piece_8h_source.html  _queen_8cpp.html  _queen_8h.html  _queen_8h_source.html  _rook_8cpp.html  _rook_8h.html  _rook_8h_source.html  annotated.html  (+81 more)
docs/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  (+31 more)
